[BE-026] Duplicar ruta
